# cci

./: CLAUDE.md  Cargo.toml  README.md
cci/: Cargo.toml
cci-macros/: Cargo.toml
cci-macros/src/: lib.rs  preset.rs  preset_enum.rs
cci-macros/src/codegen/: conversions.rs  editor.rs  mod.rs  ron_type.rs
cci/examples/: go_app.ron  multi_preset.ron  python_basic.ron  rust_library.ron
cci/src/: error.rs  lib.rs  main.rs  traits.rs
cci/src/cli/: commands.rs  mod.rs
cci/src/config/: mod.rs  ron_types.rs
cci/src/detection/: docker.rs  go.rs  mod.rs  preset_detector.rs  python.rs  registry.rs  rust.rs
cci/src/editor/: app.rs  config.rs  events.rs  registry.rs  state.rs
cci/src/generator/: multi_preset.rs
cci/src/presets/: mod.rs
examples/: docker_preset.rs  generate_all_platforms.rs  generate_github.rs  generate_with_new_api.rs
src/: constants.rs  error.rs  lib.rs  main.rs  traits.rs
src/cli/: commands.rs  mod.rs  writer.rs
src/config/: converter.rs  mod.rs  ron_types.rs
src/detection/: detector.rs  go.rs  mod.rs  python.rs  registry.rs  rust.rs
src/editor/: config.rs  events.rs  mod.rs  registry.rs  state.rs
src/editor/ui/: mod.rs
src/generator/: mod.rs  multi_preset.rs
src/models/: job.rs  mod.rs  pipeline.rs  runner.rs  step.rs  trigger.rs
src/presets/: go.rs  mod.rs  python.rs  rust.rs
src/presets/addons/: mod.rs
src/presets/docker/: editor.rs  mod.rs  preset.rs  tui.rs
src/presets/go/: app.rs  editor.rs  mod.rs  tui.rs
src/presets/python/: app.rs  editor.rs  mod.rs  tui.rs
src/presets/rust/: binary.rs  editor.rs  library.rs  mod.rs  preset.rs  tui.rs
src/tui/: app.rs  builder.rs  config.rs  events.rs  mod.rs  registry.rs  stage.rs  state.rs
(+38 files in other folders)
