[package]
name = "cci"
version = "0.1.0"
edition = "2021"
authors = ["cilki"]
description = "Control your CI/CD"
license = "Unlicense"
repository = "https://github.com/fossable/cci"
keywords = [
  "ci",
  "continuous-integration",
  "github-actions",
  "gitlab-ci",
  "automation",
]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
derive_builder = "0.20"
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
walkdir = "2.5"
cargo_toml = "0.19"
colored = "2.1"
indicatif = "0.17"
similar = "2.4"
console = "0.15"
chrono = "0.4"
ratatui = "0.26"
crossterm = "0.27"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
