[package]
name = "cci"
version = "0.1.0"
edition = "2024"
authors = ["cilki"]
description = "Control your CI/CD"
license = "Unlicense"
repository = "https://github.com/fossable/cci"
keywords = [
  "ci",
  "continuous-integration",
  "github-actions",
  "gitlab-ci",
  "automation",
]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
derive_builder = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.9.8"
anyhow = "1.0"
walkdir = "2.5"
cargo_toml = "0.22.3"
colored = "3.0.0"
indicatif = "0.18.3"
similar = "2.4"
console = "0.16.1"
chrono = "0.4"
ratatui = "0.29.0"
crossterm = "0.29.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
